[package]
name = "breakwater-rewrite"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.28", features = ["rt-multi-thread", "net", "io-util", "macros", "time"] }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
