[package]
name = "breakwater"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
rstest = "0.17"
tokio = { version = "1.28", features = ["rt-multi-thread", "net", "io-util", "macros", "time"] }

[dev-dependencies]
criterion = {version = "0.3", features = ["async_tokio"]}

[lib]
name = "breakwater"
path = "src/lib.rs"

[[bin]]
name = "breakwater"
path = "src/main.rs"

[[bench]]
name = "parse_pixelflut_commands"
harness = false

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
